# GitHub-AI-Agent

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  main_openai.py  pyproject.toml  retriever.py  summarizer.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
