[tool.poetry]
name = "github-agent"
version = "0.1.0"
description = "A simple AI agent within Python using Retrieval Augmented Generation (RAG) and LangChain."
authors = ["Sakhile L. Ndlazi <sakhilelindah@gmail.com>"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain = "^0.3.13"
langchain-astradb = "^0.5.2"
langchainhub = "^0.1.21"
transformers = "^4.47.1"
langchain-openai = "^0.2.14"
sentence-transformers = "^3.3.1"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
